--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 
     <button id="themeToggle">Toggle Dark Mode</button>
 
-    <script src="script.js"></script>
+    <script src="scrip.js"></script>
 </body>
 </html>
